Add editar e botão de desistir

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="Nome">Nome</string>
     <string name="Telefone">Telefone</string>
     <string name="salvar">Salvar</string>
+    <string name="cancelar">Cancelar</string>
 </resources>
